edited the images responsive to max width and height

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     <span>04</span> Photography Session of Interview <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      <img src="assets\img\interview.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Interview">
+                      <img src="assets\img\interview.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Interview" width="100%" height="100%">
                     </p>
                   </div>
                 </li>
@@ -414,7 +414,7 @@
                     <span>06</span> Photography Session of Industrial Talk <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      <img src="assets\img\talk.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk">
+                      <img src="assets\img\talk.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk" width="100%" height="100%">
                     </p>
 
                   </div>
