--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="row content">
           <div class="col-lg-15">
-            <p>
+            <p class="text-justify">
               We are a game development team that provide you excellent gaming application for education, working professional,
               government, researcher or community. We will be using the latest and popular technology or software tools for our development
               such as Unity, Maya, Unreal Engine, Blender and any other suitable tools, ensuring your game is working on any desired
@@ -164,7 +164,7 @@
                         <br>
                         From Johor Bahru, Johor
                       </span>
-                      <p>I will be contacting with client our frequently during the agile development progress fullfil your requirement!</p>
+                      <p>I will be contacting with our client frequently during the agile development progress fullfil your requirement!</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
                         <a href=""><i class="ri-facebook-fill"></i></a>
@@ -458,7 +458,7 @@
 
           </div>
 
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/poster.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/poster.png");' data-aos="zoom-in" data-aos-delay="150" width="100%" height="100%">&nbsp;</div>
         </div>
 
       </div>
