done Our Activity Session

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content">
-              <h3>Industrial Talk by <strong>Mr David Chew</strong> One of The Founders of <strong>Pin Tea Malaysia.</strong></h3>
+              <h3>Industrial Talk by <strong>Mr David Chew</strong>. One of The Founders of <strong>Pin Tea Malaysia.</strong></h3>
               <p>
                 On 14<sup>th</sup> June 2022, we invited the local business man Mr David as our speaker to deliver an industrial talk
                 on Webex online paltform about his business journey in Malaysia, let's go through the event on that day.
@@ -462,10 +462,10 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- End Our Event Section -->
 
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills">
+    <!-- ========================================================================================== Skills Section ======= -->
+    <!-- <section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -515,51 +515,103 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section>End Skills Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- =============================================================================== Services Section ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
-            quidem hic quas.</p>
+          <h2>Our Activities</h2>
+          < class="text-justify">In this subject, we have done some activities that related to the subject of <strong>TECHNOPRENEURSHIP SEMINAR</strong>.
+          </p>
         </div>
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Activity 1</a></h4>
+              <p class="text-justify">We shared a poster from UTMxCITE as our submission because we were yet to get an infustrial talk speaker at the time.
+                This is the link that we posted.
+                <a href="https://web.facebook.com/utmxcite/photos/a.518509121617843/2403885229746880/">Webinar Poster of Entrepreneurship and Sustainable Development Goals (SDGs). </a>
+                Mr. Mohd Rizalman, the Head of Sustainability at Spritzer Berhad, will explain how students or researchers can develop transformational solutions
+                for the SDGs through entrepreneurship projects. The event being held on 18<sup>th</sup> NOV 2021 at UTMxCITE facebook live.
+              </p><br>
+              <p class="text-justify">
+                <img src="assets\img\utmxcite_poster.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+              </p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspici</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Activity 2</a></h4>
+              <p class="text-justify">We posted a video as for the poster in activity 1, it is an Webinar talk about Entrepreneurship and Sustainable Development Goals (SDGs).
+                being held on 18<sup>th</sup> NOV 2021 at UTMxCITE facebook live. You may watch the video here.
+              </p><br>
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fweb.facebook.com%2Futmxcite%2Fvideos%2F496000021516027%2F&show_text=true&width=560&t=0" 
+                style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; 
+                web-share" allowFullScreen="true"></iframe>
+              </div>
+              <br>
+              <p class="text-justify">The Webinar was moderated by Dr Logaiswari Indiran, a senior lecturer at UTM. The overall purpose of this Webinar is to follow Mr Rizalman's 
+                journey through years of experience in sustainability advocacy, beginning with his involvement in numerous environmental and social sustainability projects. 
+                He also makes a name for himself with programmes that use entrepreneurial thinking and impact to empower communities and enterprises. Mr Rizalman is also a supporter 
+                of all social enterprises in various industries.</p>
+
+              
+            </div>
+          </div>
+                  
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-layer"></i></div>
+              <h4><a href="">Activity 3</a></h4>
+              <p class="text-justify">Based on the recent industrial talk event, we picked 2 events and created a puzzle game by using <a href="https://puzzel.org/">PUZZLE.ORG</a>
+              We created total 10 questions from our team, and we received 9 replys from other friends, here is examples of their replied.</p>
+              <br>
+              <p class="text-justify">
+                <img src="assets\img\puzzle1.JPG" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+              </p>
+              <br>
+              <p class="text-justify">
+                <img src="assets\img\puzzle2.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+              </p>
+              <br>
+              <p class="text-justify">
+                <img src="assets\img\puzzle3.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+              </p>
+              <p class="text-justify">
+                <img src="assets\img\puzzle4.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+              </p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Activity 4</a></h4>
+              <p class="text-justify">After the industrial talk and interview session with Mr David. We used Plotagon to create a animation video to simulate the interview content. Each of us asked 1
+                question, so total 5 questions have been asked to Mr David about his daily life, how to handle the stress and so on. You may watch the video here.
+              </p>
+              <br>
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/s0Q8nGSruHw" 
+                style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; 
+                web-share" allowFullScreen="true"></iframe>
+              </div>
+              <br>
+              <p class="text-justify">
+                As for the script version. you may refer to the last sub-menu -- "Our Event", in QnA tab.
+                The questions have been asked in the interview session are Can you share with us what a typical working day is like for you? How do you manage your stress? 
+                What's your favorite aspect of being an entrepreneur? What’s your most satisfying entrepreneur moment so far? What's your advice to those fresh graduates 
+                that are thinking of creating their own business?
+              </p>
             </div>
           </div>
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            </div>
-          </div>
-
         </div>
 
       </div>
