--- a/index.html
+++ b/index.html
@@ -523,14 +523,15 @@
 
         <div class="section-title">
           <h2>Our Activities</h2>
-          < class="text-justify">In this subject, we have done some activities that related to the subject of <strong>TECHNOPRENEURSHIP SEMINAR</strong>.
+          <p>
+            In this subject, we have done some activities that related to the subject of <strong>TECHNOPRENEURSHIP SEMINAR</strong>.
           </p>
         </div>
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Activity 1</a></h4>
               <p class="text-justify">We shared a poster from UTMxCITE as our submission because we were yet to get an infustrial talk speaker at the time.
                 This is the link that we posted.
@@ -546,7 +547,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-video"></i></div>
               <h4><a href="">Activity 2</a></h4>
               <p class="text-justify">We posted a video as for the poster in activity 1, it is an Webinar talk about Entrepreneurship and Sustainable Development Goals (SDGs).
                 being held on 18<sup>th</sup> NOV 2021 at UTMxCITE facebook live. You may watch the video here.
@@ -568,18 +569,21 @@
                   
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
+              <div class="icon"><i class="bx bx-game"></i></div>
               <h4><a href="">Activity 3</a></h4>
               <p class="text-justify">Based on the recent industrial talk event, we picked 2 events and created a puzzle game by using <a href="https://puzzel.org/">PUZZLE.ORG</a>
               We created total 10 questions from our team, and we received 9 replys from other friends, here is examples of their replied.</p>
               <br>
+              <br>
               <p class="text-justify">
-                <img src="assets\img\puzzle1.JPG" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                <img src="assets\img\puzzle1.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
               </p>
+              <br>
               <br>
               <p class="text-justify">
                 <img src="assets\img\puzzle2.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
               </p>
+              <br>
               <br>
               <p class="text-justify">
                 <img src="assets\img\puzzle3.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
@@ -592,7 +596,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-video"></i></div>
               <h4><a href="">Activity 4</a></h4>
               <p class="text-justify">After the industrial talk and interview session with Mr David. We used Plotagon to create a animation video to simulate the interview content. Each of us asked 1
                 question, so total 5 questions have been asked to Mr David about his daily life, how to handle the stress and so on. You may watch the video here.
