edited kai zhe reflection profile photo size

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
           <div class="col-lg-4 col-md-6 order-first order-md-last d-flex align-items-center">
             <div class="img">
               <br> <br> <br> <br> <br> <br>
-              <img src="assets\img\team\chong.jpg" alt="" class="img-fluid">
+              <img src="assets\img\team\chong.jpg" width="400px" height="400px" alt="" class="img-fluid">
             </div>
           </div>
 
