corrected some grammars mistakes

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="section-title">
           <h2>Our Event</h2>
-          <p>We had organized some eventes previously, let's join us for the future event is possible!</p>
+          <p>We had organized some events previously, let's join us for the future event if possible!</p>
         </div>
 
         <div class="row">
@@ -571,7 +571,7 @@
               <div class="icon"><i class="bx bx-game"></i></div>
               <h4><a href="">Activity 3</a></h4>
               <p class="text-justify">Based on the recent industrial talk event, we picked 2 events and created a puzzle game by using <a href="https://puzzel.org/">PUZZLE.ORG</a>
-                We created total 10 questions from our team, and we received 9 replys from other friends, here is examples of their replied.</p>
+                We created total 10 questions from our team, and we received 9 replys from other friends, here is examples of their replys.</p>
               <br>
               <br>
               <p class="text-justify">
@@ -1093,7 +1093,7 @@
               Universiti Teknologi Malaysia,<br>
               81310 Skudai, Johor<br>
               United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
+              <strong>Phone:</strong>+60 123 45678<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
           </div>
