--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
               <div class="icon"><i class="bx bx-game"></i></div>
               <h4><a href="">Activity 3</a></h4>
               <p class="text-justify">Based on the recent industrial talk event, we picked 2 events and created a puzzle game by using <a href="https://puzzel.org/">PUZZLE.ORG</a>
-                We created total 10 questions from our team, and we received 9 replys from other friends, here is examples of their replys.</p>
+                We created total 10 questions from our team, and we received 9 replies from other friends, here is examples of their replies.</p>
               <br>
               <br>
               <p class="text-justify">
@@ -608,7 +608,7 @@
               <br>
               <p class="text-justify">
                 As for the script version. you may refer to the last sub-menu -- "Our Event", in QnA tab.
-                The questions have been asked in the interview session are Can you share with us what a typical working day is like for you? How do you manage your stress?
+                The questions have been asked in the interview session are => Can you share with us what a typical working day is like for you? How do you manage your stress?
                 What's your favorite aspect of being an entrepreneur? What’s your most satisfying entrepreneur moment so far? What's your advice to those fresh graduates
                 that are thinking of creating their own business?
               </p>
