--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
             <p>
               Universiti Teknologi Malaysia,<br>
               81310 Skudai, Johor<br>
-              United States <br><br>
+              Malaysia <br><br>
               <strong>Phone:</strong>+60 123 45678<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
