edited company's address in footer

--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
               81310 Skudai, Johor<br>
               Malaysia <br><br>
               <strong>Phone:</strong>+60 123 45678<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Email:</strong> info@gameit.com<br>
             </p>
           </div>
 
