removed contact us backend

--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
             </div>
           </div>
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://script.google.com/macros/s/AKfycby1rnXWJeF-NuwRPs3IAyK5CUHtwzGYxxwZFTDujzebdU9dItbzXRNv52t0RL7yMQasAQ/exec" method="POST" role="form" class="php-email-form">
+            <form action="" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
