--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                 <div class="col-lg-6 mt-4">
                   <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="pic"><img src="assets/img/team/clive.jpg" class="img-fluid" alt=""></div>
+                    <div class="pic"><img src="assets/img/team/clive2.png" class="img-fluid" alt=""></div>
                     <div class="member-info">
                       <h4>Clive Lai Yi Cheng</h4>
                       <span>
